...
            <ImageView
                    android:layout_width="40dp"
                    android:clickable="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/Descp"

                    android:id="@+id/repeat"
                    android:src="@drawable/repeat_24"
                    android:layout_height="38dp">

            </ImageView>
            <ImageView
                    android:layout_width="40dp"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:clickable="true"
                    android:textSize="19sp"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:id="@+id/contactus"/>

            <ImageView
                    android:src="@drawable/about_us"
                    android:id="@+id/imageView2"
                    android:layout_width="30dp"
                    android:layout_marginLeft="12dp"
                    android:layout_height="30dp"/>
            <TextView
                    android:text="About Us"
...
