...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="But it's not just about winning; it's about having fun and connecting with others. Kasun's Tic Tac Game offers a multiplayer mode where you can compete against players from around the world. Challenge your friends or make new ones as you embark on thrilling tic-tac-toe battles."
                    android:textColor="@android:color/black"/>
            <Button
                    android:id="@+id/buttonContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:text="Contact Us"
                    android:textColor="@android:color/white"
...
